# stainful

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RESEARCH.md  pyproject.toml  stainful-pipeline.tour.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: README.md  _use.py  demo.sh
examples/onebusaway/: README.md
examples/onebusaway/sdk/: pyproject.toml
scripts/: fetch_oracles.sh
src/stainful/: __init__.py  cli.py  errors.py
src/stainful/config/: __init__.py  loader.py  model.py
src/stainful/emit/: __init__.py
src/stainful/ir/: __init__.py  builder.py  model.py  types.py
src/stainful/openapi/: __init__.py  loader.py  resolver.py
src/stainful/runtime/: __init__.py  _base_client.py  _exceptions.py  _sentinels.py
tests/: conftest.py  test_behavioral_conformance.py  test_binary_response.py  test_chat_fixture.py  test_config_loader.py  test_dogfood.py  test_emitter.py  test_fidelity_onebusaway.py  test_ir_builder.py  test_multipart.py  test_openapi_loader.py  test_pagination.py  test_regeneration_stability.py  test_runtime.py  test_type_parity.py  test_upstream_import_compat.py
tests/fixtures/chat/: openapi.yml  stainless-config.yml
tests/fixtures/download/: openapi.yml  stainless.yml
tests/fixtures/onebusaway/: README.md
tests/fixtures/paginated/: openapi.yml  stainless.yml
tests/quality/: __init__.py  baseline_onebusaway.json  baseline_type_parity.json  baseline_upstream_compat.json  compare.py  surface.py
(+100 files in other folders)
