[project]
name = "stainful"
version = "0.0.1"
description = "Fully open-source, drop-in stainless.yml-compatible idiomatic Python SDK generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "the stainful contributors" }]
keywords = ["openapi", "sdk", "codegen", "stainless", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Code Generators",
]

# The generator itself is dependency-light on purpose (DESIGN §5).
dependencies = [
  "ruamel.yaml>=0.18",   # position-aware YAML for quotable diagnostics
  "jinja2>=3.1",         # file-template rendering in the emitter
]

[project.scripts]
stainful = "stainful.cli:main"

[project.optional-dependencies]
# Deps the *generated* SDK needs at runtime — not needed to run the generator.
# Pinned here so the emitter can declare them in the generated pyproject.
generated-runtime = [
  "httpx>=0.27",
  "pydantic>=2.7",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stainful"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
